--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ a {
   height: 125px;
   width: 125px;
   font-size: 40px;
-  background: #2e7eed;
+  background: #99E1D9;
   border-radius: 100%;
   color: #fff;
   line-height: 125px;
@@ -274,7 +274,7 @@ a {
 }
 
 .form-control.main:focus {
-  border: 1px solid #2e7eed;
+  border: 1px solid #99E1D9;
   box-shadow: none;
 }
 
@@ -324,8 +324,7 @@ textarea.form-control.main {
   top: -70px;
 }
 
-button:focus,
-.slick-slide:focus {
+button:focus {
   outline: 0;
 }
 
@@ -337,7 +336,7 @@ button:focus,
   padding: 20px 35px;
   font-size: 14px;
   background: #fff;
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .btn-download span {
@@ -387,7 +386,7 @@ button:focus,
 .btn-main-sm {
   padding: 15px 35px;
   border-radius: 3px;
-  background: #2e7eed;
+  background: #99E1D9;
   color: #fff;
   outline: none;
   font-size: 14px;
@@ -404,7 +403,7 @@ button:focus,
 
 .btn-white {
   background: white;
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .btn-rounded-icon {
@@ -569,7 +568,7 @@ button:focus,
 
 .main-nav .dropdown .dropdown-menu .dropdown-item.active, .main-nav .dropdown .dropdown-menu .dropdown-item.focus, .main-nav .dropdown .dropdown-menu .dropdown-item:focus, .main-nav .dropdown .dropdown-menu .dropdown-item:hover {
   background-color: transparent;
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .main-nav .dropdown .dropdown-menu li:first-child {
@@ -603,7 +602,7 @@ button:focus,
 
 .dropdown-submenu.active > a,
 .dropdown-submenu:hover > a {
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .dropleft .dropdown-menu,
@@ -720,15 +719,30 @@ button:focus,
   text-align: center;
   background: #F7567C;
   border-radius: 25px;
-  color: #fff;
+  color:#fcfcfc;
   transition: 0.3s;
   z-index: 999556;
   cursor: pointer;
   display: none;
+  text-decoration: none;
+  transition: transform 200ms ease-in-out;
+}
+
+.scroll-top-a:hover {
+  text-decoration: none;
+  color:#fcfcfc;
 }
 
 .scroll-top-to:hover {
-  background: #333;
+  transform: scale(1.05);
+  text-decoration: none;
+  color:#fcfcfc;
+}
+
+.scroll-top-to:active {
+  filter: brightness(80%);
+  color:#fcfcfc;
+  text-decoration: none;
 }
 
 @media (max-width: 768px) {
@@ -953,7 +967,7 @@ button:focus,
 
 .services .service-block i {
   font-size: 30px;
-  color: #2e7eed;
+  color: #99E1D9;
   margin-bottom: 15px;
   display: inline-block;
 }
@@ -1125,7 +1139,7 @@ button:focus,
 .video-promo .content-block a i.video {
   height: 125px;
   width: 125px;
-  background: #2e7eed;
+  background: #99E1D9;
   display: inline-block;
   font-size: 40px;
   color: #fff;
@@ -1182,11 +1196,11 @@ button:focus,
 }
 
 .testimonial .testimonial-slider .owl-dots .owl-dot:hover span {
-  background: #2e7eed;
+  background: #99E1D9;
 }
 
 .testimonial .testimonial-slider .owl-dots .owl-dot.active span {
-  background: #2e7eed;
+  background: #99E1D9;
 }
 
 /* homepage 3 */
@@ -1206,7 +1220,7 @@ button:focus,
   width: 200%;
   height: 200%;
   border-radius: 50%;
-  background-image: linear-gradient(45deg, #009EC5 0%, #2e7eed 20%, #02225B 50%);
+  background-image: linear-gradient(45deg, #009EC5 0%, #99E1D9 20%, #02225B 50%);
 }
 
 .pull-top {
@@ -1360,7 +1374,7 @@ hr {
   display: block;
   height: 2px;
   border: 0;
-  border-top: 2px solid #2e7eed;
+  border-top: 2px solid #99E1D9;
   margin: 1em 0;
   padding: 0;
 }
@@ -1369,7 +1383,7 @@ hr {
   height: 80px;
   width: 80px;
   text-align: center;
-  background: #2e7eed;
+  background: #99E1D9;
 }
 
 .icon-box i {
@@ -1418,7 +1432,7 @@ hr {
 
 .team-sm .image .social-links {
   position: absolute;
-  background: #2e7eed;
+  background: #99E1D9;
   left: 0;
   right: 0;
   text-align: center;
@@ -1518,7 +1532,7 @@ hr {
 }
 
 .featured-article article.featured .content h2 a:hover {
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .featured-article article.featured .content p {
@@ -1548,7 +1562,7 @@ hr {
 }
 
 .post-sm .post-title h3 a:hover {
-  color: #2e7eed;
+  color: #99E1D9;
 }
 
 .post-sm:hover .post-thumb img {
@@ -1686,13 +1700,13 @@ hr {
 }
 
 .pagination-nav ul.pagination li a:hover {
-  background-color: #2e7eed;
+  background-color: #99E1D9;
   color: #fff;
   border-color: transparent;
 }
 
 .pagination-nav ul.pagination .active a {
-  background-color: #2e7eed;
+  background-color: #99E1D9;
   color: #fff;
   border-color: transparent;
 }
@@ -1713,11 +1727,11 @@ hr {
 }
 
 .about .about-slider .owl-dots .owl-dot:hover span {
-  background: #2e7eed;
+  background: #99E1D9;
 }
 
 .about .about-slider .owl-dots .owl-dot.active span {
-  background: #2e7eed;
+  background: #99E1D9;
 }
 
 .create-stories .block img {
@@ -1752,7 +1766,7 @@ hr {
   margin-bottom: 30px;
 }
 
-.clients .client-slider .slick-track {
+.clients .client-slider {
   display: flex;
   align-items: center;
 }
